Fix horizontal scroll on collections page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,7 +73,7 @@ color: var(--very-dark-blue);
 main{
 display: grid;
 align-items: center;
-
+width: 100%;
 min-height: 80svh;
 margin-top: 100px;
 isolation: isolate;
